# path_and_halo

./: .gitignore  README.md  axis_rot_landscape_main.m  bending_angle_landscape_main.m  bending_angle_main.m  bending_angle_with_gradient.m  check_inner_reflection.m  compute_axis_rot_weight.m  compute_llr_weight.m  contour_method_main.m  crystal_system.m  crystal_system_with_gradient.m  distance_to_poly_line.m  find_all_valid_raypath.m  find_axis_rot_contour.m  find_bending_angle_contour.m  find_bending_angle_solution.m  find_llr_contour.m  find_rotation.m  generate_halo_image.m  generate_init_config.m  geuss_halo_crystal.m  halo_test_main.m  halo_vis_fun.m  init_config_2d.m  init_config_3d.m  ll2xyz.m  ll2xyz_with_gradient.m  llr2quat.m  llr2quat_with_gradient.m  main.m  normalize_vector.m  normalize_vector_with_gradient.m  plot_input_space.m  plot_tan_space_3d.m  recursive_main.m  reflect.m  reflect_with_gradient.m  refract.m  refract_with_gradient.m  (+13 more)
+geo/: check_coplanar.m  check_curve_loop.m  distance_to_polyline.m  face_intersection_factor.m  generate_healpix_grids.m  interp_curve.m  ll2xyz.m  llr2mat.m  llr2quat.m  make_axis_pdf.m  normalize_llr.m  normalize_vector.m  polygon2d_intersection.m  project_polygon_intersection.m  quat2llr.m  quat2mat.m  quat32mat.m  reduce_pts_polyline.m  test_check_curve_loop.m  test_distance_to_polyline.m  test_interp_curve.m  test_llr2mat.m  test_llr2quat.m  test_polygon2d_intersection.m  test_project_polygon_intersection.m  test_quat2mat.m  test_quat32mat.m  test_rotation_representation.m  xyz2ll.m
+ode/: find_contour.m  find_contour_fdf.m  find_solution.m  find_solution_fdf.m  test_find_contour.m  test_find_contour_fdf.m  test_find_solution.m  test_find_solution_fdf.m
+opt/: check_raypath.m  compute_contour_weight.m  crystal_system.m  find_all_contours.m  find_cand_rot.m  find_seed_rot.m  generate_trace_n.m  halo_weight.m  init_config.m  make_axis_pdf.m  merge_inner_reflect.m  reduce_raypath.m  reflect.m  refract.m  test_check_raypath.m  test_compute_weight.m  test_contour_seeds.m  test_crystal_system.m  test_find_seed_rot.m  test_init_config.m  test_make_prism_crystal.m  trace_ray_direction.m  trace_ray_xyz.m
+utl/: show_halo_img.m
+utl/@ContourInfo/: ContourInfo.m  display_info.m
cpp/: .gitignore  CMakeLists.txt  build.sh
cpp/src/: CMakeLists.txt  geo.cpp  geo.hpp  math.hpp  render_main.cpp  sph_grid.cpp  sph_grid.hpp
cpp/src/auto_diff/: ad.hpp  common.hpp  expr.hpp  op.hpp  traits.hpp  types.hpp
cpp/src/core/: crystal.cpp  crystal.hpp  geo.cpp  geo.hpp  math.hpp  optics.cpp  optics.hpp  solver.hpp  types.hpp
cpp/src/expr/: expr.hpp  op.hpp
cpp/src/geo/: geo.cpp  geo.hpp  grid.cpp  grid.hpp  spline.hpp
cpp/src/ode/: solver.hpp
cpp/src/optics/: crystal.cpp  crystal.hpp  optics.cpp  optics.hpp  system.cpp  system.hpp
cpp/src/util/: grid.cpp  grid.hpp  log.cpp  log.hpp  sph_grid.cpp
cpp/test/: CMakeLists.txt  test_ad.cpp  test_eigen.cpp  test_geo.cpp  test_grid.cpp  test_ode.cpp  test_optics.cpp  test_sph_grid.cpp
matlab/: README.md  check_inner_reflection.m  render_halo_image.m
matlab/+geo/: check_curve_loop.m  distance_to_polyline.m  interp_curve.m  ll2xyz.m  quat2llr.m  quat2mat.m  test_check_curve_loop.m  test_distance_to_polyline.m  test_ll2xyz.m  test_rotation_representation.m  test_xyz2ll.m
matlab/+ode/: test_find_solution.m
matlab/+opt/: compute_contour_weight.m  crystal_system.m  find_all_contours.m  find_cand_rot.m  generate_trace_n.m  init_config.m  make_prism_crystal.m  merge_inner_reflect.m  reflect.m  test_contour_seeds.m  test_crystal_system.m  test_init_config.m
matlab/+utl/: bubble_hist3.m  plot_data_3d.m  plot_tan_space_3d.m
matlab/+utl/@ContourInfo/: ContourInfo.m  display_info.m
matlab/+utl/@Progress/: Progress.m
